Fixing typos and formatting mistakes

--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -11,7 +11,7 @@ sidebar_position: 10
  - Multi-document transactions and demonstrate the implementation of client-side field-level encryption  
 
 ### Prerequisites
- - A laptop with JDK 21 installed and their preferred IDE.  
+ - A laptop with JDK 21 installed and your preferred IDE.  
 
 **Time to complete:** 2 hours
 
