--- a/docs/04-spring-data-mongodb/5-Update.mdx
+++ b/docs/04-spring-data-mongodb/5-Update.mdx
@@ -23,7 +23,7 @@ public class StudentService {
 
 See if you can write a method that adds a comment to an existing grade in the `Update.java` class.
 
-## Upsert
+## upsert
 Upsert refers to updating an existing document or inserting it if it does not exist. This can be achieved using the `save()` method as well.
 
 To upsert a grade based on studentId and classId:
