--- a/docs/04-spring-data-mongodb/7-POJOs.mdx
+++ b/docs/04-spring-data-mongodb/7-POJOs.mdx
@@ -55,7 +55,7 @@ public class Score {
 }
 
 ```
-## 4. Repository Definition
+## Repository Definition
 We now circle back to our repository. Define a repository interface to perform CRUD operations on your MongoDB documents. 
 Spring Data MongoDB provides the MongoRepository interface for this purpose.
 
