--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -12,6 +12,7 @@ sidebar_position: 10
 
 ### Prerequisites
  - A laptop with JDK 21 installed and your preferred IDE.  
+ - Optional [MongoDBCompass](https://www.mongodb.com/try/download/compass?utm_campaign=devrel&utm_source=workshop&utm_term=devrel.springio.workshop.java).
 
 **Time to complete:** 2 hours
 
