--- a/docs/03-quick-start.mdx
+++ b/docs/03-quick-start.mdx
@@ -24,7 +24,7 @@ Before we dive into the content, let's ensure that your environment is properly 
     cd mdb-java-workshop
     ```
 # 3. Create a MongoDB Atlas Account
-1. Visit [MongoDB Atlas](https://account.mongodb.com/account/register) and sign up for a free account.
+1. Visit [MongoDB Atlas](https://account.mongodb.com/account/register?utm_campaign=devrel&utm_source=workshop&utm_term=devrel.springio.workshop.java) and sign up for a free account.
 2. Follow the instructions to create a new project and a MongoDB cluster.
 3. Make sure to note down your cluster's connection details; you'll need them to connect your application.
 4. Load your cluster with your sample dataset.  
