--- a/docs/04-spring-data-mongodb/1-getting-started.mdx
+++ b/docs/04-spring-data-mongodb/1-getting-started.mdx
@@ -2,6 +2,9 @@
 
 You'll need your connection string from your MongoDB Cluster:
 
+
+TODO check url format
+TODO make sure code follows best practice or is coviotted
 ```bash
 spring.data.mongodb.uri=mongodb+srv://<user>:<password>@<Cluster>>t/?retryWrites=true&w=majority
 spring.data.mongodb.database=sample_training
