--- a/docs/04-spring-data-mongodb/2-MongoTemplate-and-MongoRepository.mdx
+++ b/docs/04-spring-data-mongodb/2-MongoTemplate-and-MongoRepository.mdx
@@ -52,7 +52,7 @@ meaning it provides basic CRUD operations out of the box and derives query metho
 1. **Simplicity:** Provides a simple and easy-to-use interface for basic CRUD operations.
 2. **Query Derivation:** Automatically derives query methods from method names.
 3. **Pagination and Sorting:** Built-in support for pagination and sorting.
-4. **Custom Queries:** Supports custom query methods using the @Query annotation.
+4. **Custom Queries:** Supports custom query methods using the `@Query` annotation.
 5. **Integration with Spring Data:** Seamless integration with other Spring Data modules.  
 
 ```java
