--- a/docs/05-repositories-and-aggregation/3-Exercises.mdx
+++ b/docs/05-repositories-and-aggregation/3-Exercises.mdx
@@ -1,6 +1,6 @@
 # Time to Code!
 [Spring Support for MongoDB Aggregations](https://docs.spring.io/spring-data/mongodb/reference/mongodb/aggregation-framework.html)  
-[MongoDB Aggregation Operations](https://www.mongodb.com/docs/manual/aggregation/)
+[MongoDB Aggregation Operations](https://www.mongodb.com/docs/manual/aggregation/?utm_campaign=devrel&utm_source=workshop&utm_term=devrel.springio.workshop.java)
 
 Switch to session2 for this exercise:
 ```bash
