--- a/docs/06-transactions-and-encryption/2-csfle.mdx
+++ b/docs/06-transactions-and-encryption/2-csfle.mdx
@@ -10,6 +10,8 @@ fields in your documents, and securely managing the keys.
 
 ![Architecture for CSLFE](/img/csfle-diagram.jpg)
 
+While you can use MongoDB as your key vault, you can use other providers.
+
 Key Concepts
 - **Encryption**: CSFLE encrypts sensitive data before it reaches the MongoDB cluster, ensuring that the 
 data remains secure during transit and at rest.
