--- a/docs/summary.mdx
+++ b/docs/summary.mdx
@@ -18,5 +18,4 @@ sidebar_position: 100
 
 Thank you for joining, we can't wait to see what you build!
 
-
-Visit the [MongoDB Developer Center](https://mongodb.com/developer/?utm_campaign=devrel&utm_source=workshop&utm_medium=cta&utm_content=soccer_workshop&utm_term=stanimira_vlaeva) for more useful information and tutorials.
+Visit the [MongoDB Developer Center](https://mongodb.com/developer/?utm_campaign=devrel&utm_source=workshop&utm_term=devrel.springio.workshop.java) for more useful information and tutorials.
