--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -11,7 +11,7 @@ sidebar_position: 10
  - Multi-document transactions and demonstrate the implementation of client-side field-level encryption  
 
 ### Prerequisites
- - A laptop with JDK 21 installed and your preferred IDE.  
+ - A laptop with [JDK 21](https://www.oracle.com/ie/java/technologies/downloads/#java21) installed and your preferred IDE.  
  - [Maven 3.8.6+](https://maven.apache.org/download.cgi) 
  - Optional [MongoDBCompass](https://www.mongodb.com/try/download/compass?utm_campaign=devrel&utm_source=workshop&utm_term=devrel.springio.workshop.java).
 
