--- a/docs/03-quick-start.mdx
+++ b/docs/03-quick-start.mdx
@@ -16,6 +16,11 @@ Before we dive into the content, let's ensure that your environment is properly 
 
 # 2. Clone the Workshop Repository
 1. Clone the GitHub repository to your local machine using the following command:
+   - With ssh:
+   ```bash
+   git clone -b session1 git@github.com:mongodb-developer/mdb-java-workshop.git mdb-java-workshop
+   ```
+   - With https:
     ```bash
     git clone -b session1 https://github.com/mongodb-developer/mdb-java-workshop.git mdb-java-workshop
     ```
