--- a/docs/04-spring-data-mongodb/6-Delete.mdx
+++ b/docs/04-spring-data-mongodb/6-Delete.mdx
@@ -67,7 +67,7 @@ public void deleteGradesForStudentIdGreaterThanEqual(double studentId) {
 }
 ```
 
-## deleteAll (Drop Entire Collection)
+## deleteAll
 To delete all documents in a collection, you can use the `deleteAll()` method without any arguments. 
 This method will delete all the documents in the specified collection.
 
