--- a/docs/04-spring-data-mongodb/8-Excercises.mdx
+++ b/docs/04-spring-data-mongodb/8-Excercises.mdx
@@ -18,7 +18,7 @@ mvn spring-boot:run -Dspring-boot.run.arguments=create
 ## Read
 In `Read.java`, see if you can implement the following methods:
 
-1. Find a grade by student ID
+1. Find the first matching grade by student ID
 2. Find all grades with student IDs greater than or equal to 10000
 3. Find all grades by student ID and limit by class ID
 
