--- a/docs/06-transactions-and-encryption/1-transactions.mdx
+++ b/docs/06-transactions-and-encryption/1-transactions.mdx
@@ -18,6 +18,7 @@ collection with the required JSON Schema. See the related blog post.
 ## Example Scenario: Implementing a Shopping Cart
 Switch to `session3` for this exercise:
 ```bash
+git stash
 git checkout session3
 ```
 
