--- a/docs/06-transactions-and-encryption/1-transactions.mdx
+++ b/docs/06-transactions-and-encryption/1-transactions.mdx
@@ -19,7 +19,7 @@ collection with the required JSON Schema. See the related blog post.
 Switch to `session3` for this exercise:
 ```bash
 git stash
-git checkout session3
+git checkout session3-complete
 ```
 
 Let’s consider a scenario where a shopping cart application needs to manage product inventory and customer 
