fixed run commands

--- a/docs/04-spring-data-mongodb/8-Excercises.mdx
+++ b/docs/04-spring-data-mongodb/8-Excercises.mdx
@@ -12,7 +12,7 @@ In `Create.java`, see if you can implement the following methods:
 
 To test, run;
 ```bash
-mvn spring-boot:run -Dspring-boot.run.arguments=create
+mvn spring-boot:run "-Dspring-boot.run.arguments=create"
 ```
 
 ## Read
@@ -24,7 +24,7 @@ In `Read.java`, see if you can implement the following methods:
 
 To test, run;
 ```bash
-mvn spring-boot:run -Dspring-boot.run.arguments=read
+mvn spring-boot:run "-Dspring-boot.run.arguments=read"
 ```
 
 ## Update
@@ -42,7 +42,7 @@ it, and save the changes.
 
 To test, run;
 ```bash
-mvn spring-boot:run -Dspring-boot.run.arguments=update
+mvn spring-boot:run "-Dspring-boot.run.arguments=update"
 ```
 
 ## Delete
@@ -57,7 +57,7 @@ greater than or equal to 10000, and delete them.
 
 To test, run;
 ```bash
-mvn spring-boot:run -Dspring-boot.run.arguments=delete
+mvn spring-boot:run "-Dspring-boot.run.arguments=delete"
 ```
 
 ## Mapping POJOs
@@ -70,5 +70,5 @@ score of 50 (decimal).
 
 To test, run;
 ```bash
-mvn spring-boot:run -Dspring-boot.run.arguments=mapping
+mvn spring-boot:run "-Dspring-boot.run.arguments=mapping"
 ```
